# BootAnimationMaker

./: .gitignore  ConfigCheck.py  ImgProcess.py  PackageMake.py  README.md  README_CN.md  config_template.yml  config_template_CN.yml  pyproject.toml  requirements.txt  run.py  utils.py
example/1/: config.yml
example/2/: config.yml
example/3/: config.yml
example/4/: config.yml
example/5/: config.yml
example/6/: config.yml
i18n/: default.json  en.json  i18n.json  zh_CN.json
